src/test/ui/span/regionck-unboxed-closure-lifetimes.stderr
error[E0597]: `c` does not live long enough
  --> $DIR/regionck-unboxed-closure-lifetimes.rs:17:22
   |
17 |         let c_ref = &c;
   |                      ^ borrowed value does not live long enough
...
20 |     }
   |     - `c` dropped here while still borrowed
21 | }
   | - borrowed value needs to live until here

error: aborting due to previous error

